# OrcaSlicer

./: CMakeLists.txt
.github/workflows/: build_all.yml
src/libslic3r/: GCode.cpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: 3DScene.cpp  GUI_App.cpp
src/slic3r/Scripting/: CMakeLists.txt  M0SelfTest.cpp  PyBindings.hpp  PyDevice.cpp  PyDeviceHost.cpp  PyHost.cpp  PyHost.hpp  PyObjectModel.cpp
